--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Authorization-->
         <scene sceneID="ZxW-6N-fa4">
             <objects>
-                <tableViewController id="2c4-tO-a9Y" customClass="LoginController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="LoginController" id="2c4-tO-a9Y" customClass="LoginController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="NgT-um-nZu">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -93,7 +93,7 @@
         <!--Menu Controller-->
         <scene sceneID="GZA-aT-tIp">
             <objects>
-                <viewController id="GiB-Zv-qSf" customClass="MenuController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MenuController" id="GiB-Zv-qSf" customClass="MenuController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xZb-51-J9x"/>
                         <viewControllerLayoutGuide type="bottom" id="kfW-vR-nFz"/>
@@ -1321,7 +1321,7 @@
         <!--Navigation Controller-->
         <scene sceneID="FP1-P7-yvf">
             <objects>
-                <navigationController modalTransitionStyle="crossDissolve" id="858-7q-KsM" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="OrdersMenu" modalTransitionStyle="crossDissolve" id="858-7q-KsM" sceneMemberID="viewController">
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="eHd-Ej-ABG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1341,8 +1341,8 @@
         <image name="menu" width="1024" height="1024"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="8CP-h7-jz7"/>
         <segue reference="z1V-FB-abR"/>
+        <segue reference="StF-Uw-K4b"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
 </document>
